--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: devops
-      MYSQL_USER: admin
+      MYSQL_USER: root
       MYSQL_PASSWORD: admin
     volumes:
       # - ./message.sql:/docker-entrypoint-initdb.d/message.sql   # Mount sql script into container's /docker-entrypoint-initdb.d directory to get table automatically created
@@ -29,7 +29,7 @@ services:
       - "5001:5000"
     environment:
       MYSQL_HOST: mysql
-      MYSQL_USER: admin
+      MYSQL_USER: root
       MYSQL_PASSWORD: admin
       MYSQL_DB: devops
     depends_on:
